--- a/index.html
+++ b/index.html
@@ -55,20 +55,12 @@
       .hero-aurora:hover::before {
           opacity: 1;
       }
-
-      @keyframes marquee {
-        0% { transform: translateX(0%); }
-        100% { transform: translateX(-100%); }
-      }
-      .animate-marquee {
-        animation: marquee 40s linear infinite;
-      }
       
-      @keyframes blink {
-        50% { opacity: 0; }
-      }
       .animate-blink {
         animation: blink 1s step-end infinite;
+      }
+      @keyframes blink {
+        50% { opacity: 0; }
       }
 
       /* For animated gradient border */
@@ -106,7 +98,7 @@
         opacity: 1;
       }
 
-      /* For animated globe paths */
+      /* For animated globe paths - now handled by GSAP, but keeping for reference if needed */
       @keyframes draw-line {
         to {
           stroke-dashoffset: 0;
@@ -121,9 +113,16 @@
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.1.1/",
-    "react": "https://aistudiocdn.com/react@^19.1.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/"
+    "react": "https://esm.sh/react@18.2.0",
+    "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "react-icons/": "https://esm.sh/react-icons@5.2.1/",
+    "framer-motion": "https://esm.sh/framer-motion@11.2.10",
+    "gsap": "https://esm.sh/gsap@3.12.5",
+    "gsap/": "https://esm.sh/gsap@3.12.5/",
+    "lenis": "https://esm.sh/@studio-freight/lenis@1.1.5",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+    "react/": "https://aistudiocdn.com/react@^19.1.1/"
   }
 }
 </script>
